<resources>
    <string name="app_name">Piensa en TIC</string>
    <string name="next_page">Ya puedes continuar a la siguiente página</string>
    <string name="password_not_match">Tus contraseñas no coinciden</string>
    <string name="password_not_strong">Tu contraseña debe tener números, letras y mínimo 6 caracteres</string>
    <string name="start_video">Ver</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fields_required_missing">Aún te faltan campos por diligenciar</string>
    <string name="password">Contraseña:</string>
    <string name="password_dummy">Mshtscnell</string>
    <string name="password_strong">Contraseña súper segura:</string>
    <string name="password_dummy_strong">M5ht5cne11</string>
    <string name="name_tag">Nombre</string>
    <string name="nickname_tag">Apodo</string>
    <string name="plate">Placa</string>
    <string name="contact">Contacto</string>
    <string name="frecuented_sites">Sitios que frecuenta</string>
    <string name="dni">Documento de identidad \n o Teléfono</string>
    <string name="intro1_tittle">Atrévete a superar retos y dominar la tecnología con actividades útiles
        para enfrentar los riesgos digitales</string>
    <string name="intro2_tittle">Lleva tu propio diario digital y aprende consejos de seguridad navegando de forma segura.</string>
    <string name="aboutme_name_tittle">Escribe tu nombre</string>
    <string name="aboutme_name_hint">Nombre</string>
    <string name="aboutme_nick_name_tittle">Tu nombre de súper heroína/héroe es:</string>
    <string name="aboutme_nick_name_hint">Súper</string>
    <string name="aboutme_birthdate_tittle">Naciste el:</string>
    <string name="aboutme_birthdate_hint">dd-mm-yyyy</string>
    <string name="aboutme_email_tittle">Tu correo electronico es:</string>
    <string name="aboutme_email_hint">Email</string>
    <string name="aboutme2_nick_name_tittle">de ahora en adelante serás</string>
    <string name="aboutme2_email_tittle">tu correo electrónico es</string>
    <string name="aboutme2_birthdate_tittle">naciste el %1$s de %2$s de %3$s</string>
    <string name="dialog_treatment_tittle1">Piensa en TIC respeta los derechos sobre el manejo de tus datos
        personales, por favor lee y acepta los </string>
    <string name="dialog_treatment_tittle2">Términos y Condiciones </string>
    <string name="dialog_treatment_tittle3"> para continuar.</string>
    <string name="dialog_treatment_note">* En caso de no aceptar no podrás \n
        seguir usando la aplicacion</string>
    <string name="dialog_create_password_tittle">Crea una contraseña súper segura para proteger tu cuaderno,
        con ella solo tú podrás editar y ver información privada.</string>
    <string name="activityone_tittle">, piensa en una canción o frase que te guste,
            por ejemplo esta parte de la canción \"Cuando te veo\" de Choquibtown</string>
    <string name="activityone2_tittle">Toma las letras iniciales y forma una contraseña súper segura:</string>
    <string name="activityone3_tittle">Si quieres hacerla aún más indescifrable, puedes cambiar algunas letras
        por números que se parezcan, por ejemplo la ele (l) por 1, la ese (s) por 5, quedaría así:</string>
    <string name="activityone4_tittle">, ¿ya pensaste tu contraseña? Para hacerla súper segura debe tener números, letras
        y mínimo 6 caracteres </string>
    <string name="activityone5_tittle">Esta contraseña es solo tuya!!! No se la digas a nadie ni la escribas en un papel.
        Ten en cuenta que vas a usarla siempre que abras la aplicación.</string>
    <string name="activityone4_lets_write">Escríbela</string>
    <string name="activityone4_lets_write_again">Escríbela nuevamente para confirmar</string>
    <string name="activitytwo1_tittle">Toma una fotografía que te represente, puede ser de ti o de
        algo que te guste mucho, también de un dibujo que hayas hecho. No te limites, puedes usar una imagen
        con filtros de Snapchat, Pinterest o alguna aplicación divertida que tengas en tu celular o computadora.</string>
    <string name="activitytwo2_tittle">Esta imagen dice mucho de ti, más allá de lo que muestra también tiene información sobre
        la hora, la fecha y lugar dónde la tomaste, e incluso puede tener el nombre o información sobre tu celular o cámara utilizada.
        Estos datos se llaman Metadatos.</string>
    <string name="activitytwo3_tittle">Si deseas conocer más sobre los metadatos puedes consultar estas dos fuentes:</string>
    <string name="activitytwo3_wikipedia"> \u2022        Wikipedia</string>
    <string name="activitytwo3_ICANN">\u2022        ICANN</string>
    <string name="pick_image_intent_text">Seleccionar fuente de la imagen</string>
    <string name="activitythree1_text">¿Tienes una billetera o cartera donde guardas tus cosas importantes? ¿Qué pasaría si una persona toma y
        revisa tu cartera? ¿Qué encontraría?</string>
    <string name="activitythree2_ques1">Fotografías de mis amigos</string>
    <string name="activitythree2_ques2">Mis fotografías</string>
    <string name="activitythree2_ques3">Datos de identificación</string>
    <string name="activitythree2_ques4">Teléfonos y datos de contacto de familia y amigos</string>
    <string name="activitythree2_ques5">Dinero o tarjetas de banco (miles de pesos)</string>
    <string name="activitythree2_ques6">¿Qué más tienes?</string>
    <string name="activitythree2_opt1">0 a 5</string>
    <string name="activitythree2_opt2">Más de 5</string>
    <string name="activitythree2_opt3">Más de 20</string>
    <string name="activitythree2_opt4">Más de 100</string>
    <string name="activitythree3_tittle">Ahora imagina que esa persona toma tu teléfono celular ¿Qué encontraría?
            Revisa!</string>
    <string name="activitythree4_pocket">cartera: </string>
    <string name="activitythree4_phone">teléfono: </string>
    <string name="activitythree5_tittle">Guardas muchas cosas en tu billetera y guardas más en tu celular.
        Toda esta información es valiosa, ¡protégela! </string>
    <string name="activitythree5_note">Estos consejos prácticos te ayudarán</string>
    <string name="activitythree6_text">Utiliza una contraseña o un patrón para bloquear la pantalla</string>
    <string name="activitythree7_text">Marca la tarjeta SIM, la tarjeta de memoria, la batería y el teléfono con algo único
            para darte cuenta si te los han cambiado</string>
    <string name="activitythree8_text">No guardes información sensible en tu teléfono sin protegerla con una contraseña</string>
    <string name="activitythree9_text">Conoce el número IMEI de tu teléfono marcando *#06#, así será más fácil rastrearlo si se te pierde
            o te lo roban</string>
    <string name="activitythree10_text">¡Nunca dejes tu teléfono solo en un lugar público!</string>
    <string name="activityfour1_text">Ingresa a alguna de tus redes sociales y busca entre tus contactos dos personas que no conozcas o que no
            tengas idea de porque están allí.</string>
    <string name="activityfour2_text">Revisa sus perfiles y publicaciones, identifica si tienen amigos en común y ponles un apodo que nazca de tu corazón.</string>
    <string name="activityfour3_tittle">No encontraste ninguna persona desconocida</string>
    <string name="activityfour3_text">Cuanto tengas personas desconocidas entre tus contactos, asegúrate de que sean reales y confiables.  \n \n
            Piensa en la cantidad de contenido tuyo al que pueden acceder y si de verdad quieres darle ese permiso.</string>
    <string name="activityfour4_text">¿Vale la pena que las tengas en tus contactos?¿Cómo puedes asegurarte de que son personas reales y confiables?
            Piensa en la cantidad de contenido tuyo al que puedan acceder y si de verdad quieres darles ese permiso...
            si no, mejor elimínalos, así no podrán acceder a tus contenidos privados.</string>
    <string name="activityfour5_text">Revisa periódicamente tu lista de contactos y seguidores en redes sociales, también los permisos que tienen sobre tu perfil y la información que publicas.</string>
    <string name="activityfive1_text">Mira el siguiente video y conoce sobre la encriptación de los mensajes</string>
    <string name="activityfive2_text">Escribe un mensaje secreto para tu mejor amigo o amiga, comienza con algo como: Hoy quiero contarte que... \n \n
        Encríptalo, tómale una foto y envíalo por el sistema de mensajería que más te guste. \n \n
        ¡No olvides contarle a tu contacto como descifrarlo!</string>
    <string name="activityfive3_text">Algunos programas de mensajería usan códigos para encriptar los mensajes que intercambias con tus contactos protegiendo tus conversaciones \n \n
        Pero muchos no lo hacen o lo hacen muy mal.</string>
    <string name="activityfive4_tittle">Una buena encriptación debería:</string>
    <string name="activityfive4_text1">Encriptar los mensajes mientras viajan de tu teléfono al de tu contacto.</string>
    <string name="activityfive4_text2">Encriptar tan bien que ni el programa los pueda entender.</string>
    <string name="activityfive5_text1">Encriptar además la identidad de tus contactos a quienes envías el mensaje</string>
    <string name="activityfive5_text2">Usar un método de encriptación revisado y validad por personas expertas</string>
    <string name="activityfive6_text">Si quieres que tus mensajes estén bien encriptados prueba con Signal o Telegram. \n \n
            Para saber si tus programas de mensajería son buenos puedes consultar</string>
    <string name="activityfive6_link">http://www.eff.org/node/82654</string>
    <string name="activityfive2_share_txt">Encriptando con Piensa En TIC</string>
    <string name="activitysix1_tittle">Ahora eres espía!</string>
    <string name="activitysix1_text">Mira las fotos que publican algunos de tus contactos y busca lo siguiente</string>
    <string name="activitysix2_text">Una foto en la que se lean las placas del carro de tu contacto</string>
    <string name="activitysix3_text">Una foto que muestre los sitios que frecuentan los fines de semana</string>
    <string name="activitysix4_text">Una imagen en la que se vea el número de documento de identidad o teléfono</string>
    <string name="activitysix6_text">Las imágenes y fotografías que publicas pueden decir mucho más de ti de lo que quisieras. \n \n
        Mira entre tus imágenes y busca aquellas que muestren información que no quieres que sea pública! \n \n
        Elimínalas o protégelas, de todas maneras recuerda que alguien ya puede tener una copia de ellas.</string>
    <string name="activitysix7_text"> ¿Qué imágenes con información encontraste?</string>
    <string name="activitysix7_text2">¿Las eliminaste o protegiste?</string>
    <string name="activitysix7_chose1">Sí, lo hice</string>
    <string name="activitysix7_choose2">No, lo haré más tarde</string>
    <string name="contactscreen_1">Para dejar tus comentarios o calificar ingresa a </string>
    <string name="contactscreen_2">Piensa en TIC en Play Store</string>
        <string name="contactscreen_3">\n \n Envíanos tus sugerencias y observaciones a </string>
    <string name="contactscreen_4">info@piensatic.co</string>
    <string name="contactscreen_5">\n \n Conoce más sobre seguridad y derechos en los espacios digitales en \n \n</string>
    <string name="contactscreen_6">http://dominemoslatecnologia.org</string>
    <string name="loggin">Bienvenido a Piensa En TIC. Por favor ingresa tu contraseña segura.</string>
    <string name="loggin_hint">Contraseña</string>
    <string name="pasword_recovery">¿Olvidaste tu contraseña?</string>
</resources>