<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:text="@string/aboutme_name_tittle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                style="@style/ActivityInnerTextFieldTittle"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/et_name"
                style="@style/ActivityInnerTextFieldEditable"
                />

            <TextView
                android:text="@string/aboutme_nick_name_tittle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                style="@style/ActivityInnerTextFieldTittle"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/et_nickname"
                style="@style/ActivityInnerTextFieldEditable"
                />

            <TextView
                android:text="@string/aboutme_birthdate_tittle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                style="@style/ActivityInnerTextFieldTittle"/>

            <TextView
                android:text="@string/aboutme_birthdate_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_birthdate"
                android:clickable="true"
                android:paddingRight="50dp"
                android:paddingLeft="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/pantalla_04_select_aaaa"
                style="@style/ActivityInnerTextFieldTittle"/>

            <TextView
                android:text="@string/aboutme_email_tittle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                style="@style/ActivityInnerTextFieldTittle"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/et_email"
                style="@style/ActivityInnerTextFieldEditable"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>