<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_loggin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/intro_fondo"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/intro_logo"
            android:id="@+id/imageView12"
            android:layout_weight="0.4" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6">

            <TextView
                    android:text="@string/loggin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView20"
                    android:layout_marginTop="20dp"
                    android:layout_margin="20dp"
                    android:textSize="28sp"
                    style="@style/ActivityInnerTextFieldTittle"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/loggin_hint"
                    android:textColorHint="@color/blue_dark_activity_text"
                    android:ems="10"
                    android:textSize="28sp"
                    android:layout_marginTop="20dp"
                    android:id="@+id/et_loggin"
                    style="@style/ActivityInnerTextFieldEditable"/>

            <TextView
                android:text="@string/pasword_recovery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pasword_recovery"
                android:layout_marginTop="40dp"
                android:textColor="@color/red_active_pager"
                android:textSize="28sp"
                android:clickable="true"
                style="@style/ActivityInnerTextFieldTittle"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
