<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="8dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/pantalla_43_marco1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:text="@string/plate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_plate"
                    android:layout_marginTop="15dp"
                    style="@style/ActivityTextFieldGreen"/>

                <TextView
                    android:text="@string/contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_contact_1"
                    android:layout_marginBottom="15dp"
                    style="@style/ActivityTextFieldGreen"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/pantalla_43_marco2"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:text="@string/frecuented_sites"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_site_1"
                    android:layout_marginTop="15dp"
                    style="@style/ActivityTextFieldGreen"/>

                <TextView
                    android:text="@string/frecuented_sites"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_site_2"

                    style="@style/ActivityTextFieldGreen"/>

                <TextView
                    android:text="@string/frecuented_sites"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_site_3"

                    style="@style/ActivityTextFieldGreen"/>

                <TextView
                    android:text="@string/contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_contact_2"
                    android:layout_marginBottom="15dp"
                    style="@style/ActivityTextFieldGreen"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/pantalla_43_marco1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:text="@string/dni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_dni"
                    android:layout_marginTop="15dp"
                    style="@style/ActivityTextFieldGreen"/>

                <TextView
                    android:text="@string/contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_contact_3"

                    android:layout_marginBottom="25dp"
                    style="@style/ActivityTextFieldGreen"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>